# battletest

./: Cargo.toml
src/: goblin.json  main.rs  monsterlib.rs
