[package]
name = "battletest"
version = "0.1.0"
authors = ["royalmustard <36129876+royalmustard@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "*"
serde = { version = "*", features = ["derive"] }
rand = "*"
serde_derive = "*"
d20 = "*"
pbr = "*"
